--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -202,13 +202,16 @@ header {
     right: .75em;
 
     display: flex;
-    gap: 2em;
     flex-flow: column;
 
-    div:nth-child(1),div:nth-child(2) {
+    justify-content: space-between;
+
+    &__amount div {
       display: flex;
       justify-content: space-between;
       align-items: center;
+
+      margin-bottom: 2em;
     }
 
     h2 {
@@ -230,5 +233,23 @@ header {
 
       margin: 0;
     }
+  }
+}
+
+/* desktop design */
+
+@media only screen and (min-width:1200px) {
+  .card {
+    width: 921px;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+      "bill result"
+      "tip result"
+      "no-of-people result";
+  }
+
+  .card .tip__grid {
+    grid-template-columns: repeat(3,1fr);
   }
 }
