--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,16 +101,22 @@ input[type=number] {
 }
 
 /* mobile design */
+body {
+  display: grid;
+  gap: 3em;
+  place-content: center;
+  min-height: 100vh;
+}
+
 header {
   text-align: center;
-  margin-block: 3em;
+  margin-top: 3em;
 }
 
 .card {
   display: grid;
   gap: 2em;
   width: min(420px, 100vw);
-  margin-inline: auto;
   padding: 2em;
   background-color: white;
   border-radius: 1em;
@@ -195,6 +201,10 @@ header {
 
 /* desktop design */
 @media only screen and (min-width: 1200px) {
+  header {
+    margin-top: 0;
+  }
+
   .card {
     width: 921px;
     grid-template-columns: 1fr 1fr;
