--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -113,9 +113,17 @@ input[type=number] {
 
 /* mobile design */
 
+body {
+  display: grid;
+  gap: 3em;
+  place-content: center;
+
+  min-height: 100vh;
+}
+
 header {
   text-align: center;
-  margin-block: 3em;
+  margin-top: 3em;
 }
 
 .card {
@@ -123,7 +131,6 @@ header {
   gap: 2em;
 
   width: min(420px,100vw);
-  margin-inline: auto;
   padding: 2em;
   background-color: white;
   border-radius: 1em;
@@ -239,6 +246,10 @@ header {
 /* desktop design */
 
 @media only screen and (min-width:1200px) {
+  header {
+    margin-top: 0;
+  }
+
   .card {
     width: 921px;
 
